<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddEditPhoneActivity">

    <EditText
        android:id="@+id/producent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/producent"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/model"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/wersja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wersja"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/strona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/strona"
        android:inputType="text"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <Button
            android:id="@+id/web_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web_site"
            android:layout_marginRight="16dp"
            />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/web_site"
            android:text="@string/cancel"
            android:layout_marginRight="16dp"
            />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_toRightOf="@+id/cancel"/>
    </RelativeLayout>

</LinearLayout>